--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,28 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+### Firebase ###
+.idea
+**/node_modules/*
+**/.firebaserc
+
+### Firebase Patch ###
+.runtimeconfig.json
+.firebase/
+
+### react ###
+.DS_*
+*.log
+logs
+**/*.backup.*
+**/*.back.*
+
+node_modules
+bower_components
+
+*.sublime*
+
+psd
+thumb
+sketch
+
